<resources>
    <string name="app_name">Emon\'s Assessment</string>
    <string name="title_activity_auth">AuthActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="sign_in_here">Sign In Here !</string>
    <string name="user_name">User Name</string>
    <string name="register_here">Register Here !</string>
    <string name="don_t_have_an_account">Don\'t Have An Account ?</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="search_anything_here">Search Anything Here</string>
    <string name="search">Search</string>
    <string name="visit_profile">Visit Profile</string>
    <string name="go_back">Go Back</string>
</resources>