<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/purple_200"
    tools:context=".Fragments.SignInFragment">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp"
        android:backgroundTint="#50ffffff">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/MyAccountImageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ss.anoop.awesometextinputlayout.AwesomeTextInputLayout
                android:id="@+id/awesomeTextInputLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                app:borderColor="@color/purple_500"
                app:borderWidth="2dp"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/MyAccountImageView">

                <EditText
                    android:id="@+id/signInEmailText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"
                    android:textColorHint="@color/purple_500"
                    android:textColor="@color/purple_500"
                    android:inputType="text"
                    android:textSize="15sp" />

            </ss.anoop.awesometextinputlayout.AwesomeTextInputLayout>

            <ss.anoop.awesometextinputlayout.AwesomeTextInputLayout
                android:id="@+id/awesomeTextInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                app:borderColor="@color/purple_500"
                app:borderWidth="2dp"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/awesomeTextInputLayout1">

                <EditText
                    android:id="@+id/signInPassText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textColorHint="@color/purple_500"
                    android:textColor="@color/purple_500"
                    android:inputType="textPassword"
                    android:textSize="15sp" />

            </ss.anoop.awesometextinputlayout.AwesomeTextInputLayout>


            <Button
                android:id="@+id/signInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/button_shape"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:layout_marginTop="80dp"
                app:layout_constraintTop_toBottomOf="@+id/awesomeTextInputLayout2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signInButton">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/don_t_have_an_account" />

                <TextView
                    android:id="@+id/signUpTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_here"
                    android:textColor="@color/purple_700"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:paddingStart="5dp"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>





    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>