<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    android:orientation="vertical"
    tools:context=".Activities.MainActivity">

    <LinearLayout
        android:id="@+id/MainToolBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="end"
        android:paddingEnd="5dp"
        android:background="@color/purple_500">

        <TextView
            android:id="@+id/MainUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="UserName"
            android:textSize="22sp"
            android:textColor="@color/white" />


        <Button
            android:id="@+id/ProfileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visit_profile"
            android:backgroundTint="@color/purple_200"
            android:textColor="@color/purple_500" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <ss.anoop.awesometextinputlayout.AwesomeTextInputLayout
            android:id="@+id/awesomeTextInputLayout1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            app:borderColor="@color/purple_500"
            app:borderWidth="2dp"
            app:cornerRadius="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MyAccountImageView">

            <EditText
                android:id="@+id/SearchText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_anything_here"
                android:inputType="text"
                android:textSize="15sp" />

        </ss.anoop.awesometextinputlayout.AwesomeTextInputLayout>

        <Button
            android:id="@+id/SearchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textColor="@color/white" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RecyclerView"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



        </androidx.recyclerview.widget.RecyclerView>

    </ScrollView>





</LinearLayout>