<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/purple_200"
    tools:context=".Fragments.SignUpFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp"
        android:backgroundTint="#50ffffff">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Toolbar
                android:id="@+id/signUpToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
            </Toolbar>

            <ImageView
                android:id="@+id/MyAccountImageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signUpToolbar" />

            <ss.anoop.awesometextinputlayout.AwesomeTextInputLayout
                android:id="@+id/awesomeTextInputLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                app:borderColor="@color/purple_500"
                app:borderWidth="2dp"
                app:cornerRadius="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/MyAccountImageView">

                <EditText
                    android:id="@+id/signUpNameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:textSize="15sp" />

            </ss.anoop.awesometextinputlayout.AwesomeTextInputLayout>

            <ss.anoop.awesometextinputlayout.AwesomeTextInputLayout
                android:id="@+id/awesomeTextInputLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                app:borderColor="@color/purple_500"
                app:borderWidth="2dp"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/awesomeTextInputLayout4">

                <EditText
                    android:id="@+id/signUpEmailText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"
                    android:inputType="text"
                    android:textSize="15sp" />

            </ss.anoop.awesometextinputlayout.AwesomeTextInputLayout>

            <ss.anoop.awesometextinputlayout.AwesomeTextInputLayout
                android:id="@+id/awesomeTextInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                app:borderColor="@color/purple_500"
                app:borderWidth="2dp"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/awesomeTextInputLayout1">

                <EditText
                    android:id="@+id/signUpPassText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="15sp" />

            </ss.anoop.awesometextinputlayout.AwesomeTextInputLayout>

            <ss.anoop.awesometextinputlayout.AwesomeTextInputLayout
                android:id="@+id/awesomeTextInputLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                app:borderColor="@color/purple_500"
                app:borderWidth="2dp"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/awesomeTextInputLayout2">

                <EditText
                    android:id="@+id/signUpConfPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:textSize="15sp" />

            </ss.anoop.awesometextinputlayout.AwesomeTextInputLayout>

            <Button
                android:id="@+id/SignUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAllCaps="false"
                android:text="Sign Up"
                android:textColor="#fff"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/awesomeTextInputLayout3" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/SignUpButton"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/signInTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:text="@string/sign_in_here"
                    android:textColor="@color/purple_500"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>





    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>